@@ -1,4 +1,4 @@
-/* $Id: style.css,v 1.54 2009/04/26 15:01:06 dries Exp $ */
+/* $Id: style.css,v 1.55 2009/05/12 08:31:17 dries Exp $ */
 
 /**
  * Generic elements
@@ -520,7 +520,7 @@ body.two-sidebars #footer {
   color: #529ad6;
 }
 
-#mission {
+#highlight {
   padding: 1em;
   background-color: #fff;
   border: 1px solid #e0e5fb;
