@@ -1,4 +1,4 @@
-// $Id: CHANGELOG.txt,v 1.306 2009/05/03 05:03:44 dries Exp $
+// $Id: CHANGELOG.txt,v 1.307 2009/05/12 08:31:16 dries Exp $
 
 Drupal 7.0, xxxx-xx-xx (development version)
 ----------------------
@@ -109,7 +109,9 @@ Drupal 7.0, xxxx-xx-xx (development version)
     * Provides a subset of the features of the Content Construction
       Kit (CCK) module.
 - Page organization
-    * Made the help text area a full featured region with blocks. 
+    * Made the help text area a full featured region with blocks.
+    * Site mission is replaced with the highlighted content block region and 
+      separate RSS feed description settings.  
 - Upgraded the core JavaScript library to jQuery version 1.3.2.
 - Upgraded the jQuery Forms library to 2.21.
 
